remove issue: jump scroll when click on anchor

--- a/src/main.scss
+++ b/src/main.scss
@@ -14,9 +14,6 @@ nav {
 .tab-content {
     display: none;
 }
-.tab-content:target {
-    display: block;
-}
 
 .tab-menu {
   display: flex;
